--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: "3nAsupUNzSYTdC5U"     # lichess OAuth2 Token
+token: "mG20MYfJgUrJvwof"     # lichess OAuth2 Token
 url: "https://lichess.org/"  # lichess base URL
 
 engine:                      # engine settings
